--- a/ChatInterface/Base.lproj/Main.storyboard
+++ b/ChatInterface/Base.lproj/Main.storyboard
@@ -167,7 +167,7 @@
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zWs-3g-5bM">
                                                             <rect key="frame" x="0.0" y="0.0" width="200" height="84"/>
                                                             <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rDc-uo-tbp">
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rDc-uo-tbp">
                                                                     <rect key="frame" x="5" y="5" width="190" height="74"/>
                                                                 </imageView>
                                                             </subviews>
@@ -226,7 +226,7 @@
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LdS-nH-Xs2">
                                                             <rect key="frame" x="50" y="0.0" width="200" height="84"/>
                                                             <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8e0-7d-ajH">
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8e0-7d-ajH">
                                                                     <rect key="frame" x="5" y="5" width="190" height="74"/>
                                                                 </imageView>
                                                             </subviews>
@@ -359,8 +359,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qQE-Uc-dXa">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qQE-Uc-dXa">
+                                <rect key="frame" x="0.0" y="112" width="375" height="555"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FriendCell" id="dFJ-T7-x88">
@@ -373,27 +374,40 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GH3-Gm-gNF">
+                                <rect key="frame" x="16" y="74" width="233" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nxt-9C-7FQ">
+                                <rect key="frame" x="262" y="75" width="104" height="27"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="Create Chat Room">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="createChatRoomAction:" destination="Jsp-Vb-O7y" eventType="touchUpInside" id="HXA-D7-ajq"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="qQE-Uc-dXa" firstAttribute="top" secondItem="ggs-89-q13" secondAttribute="top" id="03G-1e-hjc"/>
-                            <constraint firstItem="qQE-Uc-dXa" firstAttribute="bottom" secondItem="ggs-89-q13" secondAttribute="bottom" id="Rzd-Mi-SYD"/>
-                            <constraint firstItem="qQE-Uc-dXa" firstAttribute="trailing" secondItem="ggs-89-q13" secondAttribute="trailing" id="eLA-T4-rRW"/>
-                            <constraint firstItem="qQE-Uc-dXa" firstAttribute="leading" secondItem="ggs-89-q13" secondAttribute="leading" id="rY9-jy-PR5"/>
-                        </constraints>
+                        <color key="backgroundColor" red="0.27353608610000002" green="0.5374699235" blue="0.96083360910000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <viewLayoutGuide key="safeArea" id="ggs-89-q13"/>
                     </view>
                     <navigationItem key="navigationItem" title="朋友列表" id="sSh-bQ-7a0">
                         <barButtonItem key="backBarButtonItem" title="回前頁" id="RYc-B1-bJw"/>
                     </navigationItem>
                     <connections>
+                        <outlet property="createChatRoomTextField" destination="GH3-Gm-gNF" id="g5T-p1-sEA"/>
                         <outlet property="friendTableView" destination="qQE-Uc-dXa" id="JP1-nT-zE3"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="goToChatRoom" id="f0X-2j-YUl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uaP-Ah-wNd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1969" y="-18"/>
+            <point key="canvasLocation" x="1968.8" y="-18.440779610194905"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="TEj-f6-yCA">
