--- a/ChatInterface/Base.lproj/Main.storyboard
+++ b/ChatInterface/Base.lproj/Main.storyboard
@@ -167,7 +167,7 @@
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zWs-3g-5bM">
                                                             <rect key="frame" x="0.0" y="0.0" width="200" height="84"/>
                                                             <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rDc-uo-tbp">
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rDc-uo-tbp">
                                                                     <rect key="frame" x="5" y="5" width="190" height="74"/>
                                                                 </imageView>
                                                             </subviews>
